// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Exchange > should render empty 1`] = `
<div>
  <div
    class="relative flex flex-col sm:min-h-screen pb-32 sm:pb-0"
    style="min-height: -webkit-fill-available;"
  >
    <div
      class="dim:bg-theme-dim-950 fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white sm:hidden dark:bg-black"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-900 dim:border-theme-dim-950 border-t"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="received"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 21 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="sent"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="custom-nav-wrapper dark:bg-theme-dark-900 dim:bg-theme-dim-900 sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 border-b-theme-secondary-300 dark:border-b-theme-dark-700 dim:border-b-theme-dim-700 h-12 border-b"
    >
      <div
        class="relative flex h-12 flex-row"
      >
        <div
          class="hidden w-9 sm:flex"
        >
          <button
            class="border-b-theme-secondary-300 bg-theme-secondary-100 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dim:bg-theme-dim-950 dim:border-b-theme-dim-700 flex w-9 items-center border-b transition-colors duration-200 text-theme-secondary-500 dark:text-theme-secondary-800 cursor-not-allowed"
          >
            <div
              class="mx-auto"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-left-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center justify-between gap-3 px-6"
        >
          <div
            class="flex flex-row items-center gap-5"
          >
            <div
              class="my-auto flex h-12 items-center"
            >
              <div
                class="flex items-center space-x-[2px]"
              >
                <button
                  class="bg-theme-primary-600 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 my-auto flex cursor-pointer items-center justify-center text-white outline-hidden focus:ring-2 focus:outline-hidden h-6 w-6 rounded rounded-r-none"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 363 363"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_434_4442)"
                      >
                        <path
                          d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                          fill="currentColor"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
                <div
                  class="dark:bg-theme-dark-navy-900 dark:text-theme-dark-navy-300 dim:bg-theme-dim-navy-900 dim:text-theme-dim-navy-300 bg-theme-navy-100 text-theme-navy-600 flex cursor-pointer items-center px-2 py-[0.313rem] text-center text-xs leading-[0.938rem] font-semibold h-6 rounded rounded-l-none"
                >
                  ALPHA
                </div>
              </div>
            </div>
            <ul
              class="hidden h-12 items-center gap-0.5 xl:flex"
              data-testid="NavigationBar__menu"
            >
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-primary-600 border-theme-primary-200 bg-theme-secondary-200 dim:text-theme-dim-50 dim:bg-theme-dim-950 dim:border-theme-dim-700 dark:text-theme-dark-50 dark:bg-theme-dark-950 dark:border-theme-dark-700 active"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/contacts"
                  title="Contacts"
                >
                  Contacts
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/votes"
                  title="Votes"
                >
                  Votes
                </a>
              </li>
            </ul>
            <div
              class="mr-auto flex content-center items-center xl:hidden"
              data-testid="NavigationBar__menu-toggle"
            >
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="text-theme-secondary-700 dark:text-theme-dark-200 focus:ring-theme-primary-400 flex h-7 cursor-pointer items-center rounded focus:ring-2 focus:outline-hidden"
                  type="button"
                >
                  <div>
                    <div
                      style="height: 20px; width: 20px;"
                    >
                      <svg
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1 15.5h18M1 10h18M1 4.5h18"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-row items-center justify-center gap-3 sm:gap-5"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="m-0 p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="bell"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="bg-theme-background group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800 absolute top-0 right-0 flex items-center justify-center rounded-full p-0.5 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="bg-theme-danger-500 h-1.5 w-1.5 rounded-full"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-6 border-r sm:h-12"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="m-0 p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.4055 7.25359C12.7875 3.8816 9.75152 1.59001 6.47283 2.0207C3.19415 2.45138 0.803089 5.45586 1.0128 8.88148C1.2225 12.3071 3.96068 14.9728 7.26548 14.9687H15.0878C16.6941 14.9714 18.1382 13.9523 18.7275 12.4002C19.3168 10.8481 18.9312 9.07955 17.7555 7.94265C16.5799 6.80574 14.8539 6.53236 13.4055 7.25359ZM13.4055 7.25359C13.5 7.96875 13.4 8.76875 13 9.96875"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center justify-center rounded-full p-1 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-success-600 dark:bg-theme-success-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden h-6 border-r sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="received"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden h-6 border-r sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="sent"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-6 border-r sm:h-12"
            />
            <div
              class="hidden sm:block"
            >
              <div>
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group"
                  >
                    <button
                      class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:bg-theme-dark-700 group-hover:bg-theme-secondary-200 w-auto p-1"
                      data-testid="NavigationBar__buttons--network"
                      type="button"
                    >
                      <div
                        class="flex items-center gap-2"
                      >
                        <span
                          class="border-theme-warning-300 bg-theme-warning-50 text-theme-warning-600 dark:border-theme-danger-info-border dark:text-theme-danger-info-text rounded border-2 p-[3px] dark:bg-transparent"
                        >
                          <div>
                            <div
                              style="height: 14px; width: 14px;"
                            >
                              <svg
                                fill="none"
                                height="14"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="Frame 9852"
                                >
                                  <path
                                    d="M3 3.36257V1.81641H11.1236V3.36257H7.97656V11.9982H6.14702V3.36257H3Z"
                                    fill="currentColor"
                                    id="T"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                        <span
                          class="text-theme-secondary-700 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 group-hover:text-theme-secondary-900 text-sm"
                        >
                          Testnet
                        </span>
                        <div
                          class="text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 transition-transform"
                          role="img"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 hidden h-6 border-r sm:block sm:h-12"
            />
            <div
              class="ml-1 flex items-center gap-5 sm:ml-0"
            >
              <div
                class="m-0 items-center gap-2 space-x-0 md-lg:flex hidden"
              >
                <button
                  class="space-x-3 text-base relative justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none group text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 hover:bg-theme-secondary-200 dim:text-theme-dim-200 dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 flex flex-row items-center gap-2 rounded px-1 py-0.5"
                  data-testid="HideBalance-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="flex items-center justify-center"
                    >
                      <div
                        data-testid="HideBalance-icon-show"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="eye"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                              />
                              <path
                                d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 md-lg:flex dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 group-hover:text-theme-secondary-900 hidden text-sm leading-[17px] font-semibold"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="group dark:hover:bg-theme-dark-700 hover:bg-theme-secondary-200 dim-hover:bg-theme-dim-700 flex items-center gap-6 rounded bg-transparent py-0.5"
                >
                  <div
                    class="relative cursor-pointer items-center justify-center rounded align-middle"
                    data-testid="UserMenu"
                  >
                    <div
                      class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-6 w-6 text-xs ring-theme-background ring-0 shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                        />
                        <span
                          class="text-theme-background dark:text-theme-text absolute text-xs font-semibold"
                        >
                          FO
                        </span>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8"
      >
        <div
          class="mx-auto px-6 md:px-10 lg:container"
        >
          <div
            class="bg-theme-background flex items-end justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="mb-1 flex items-center gap-3"
              >
                <div
                  class="hidden sm:inline"
                >
                  <div
                    data-testid="icon-ExchangesLight"
                  >
                    <div
                      style="height: 55px; width: 54px;"
                    >
                      <svg
                        fill="none"
                        height="51"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 54 51"
                        width="54"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M33.4563 44.0692C32.2741 44.4896 30.8748 44.5249 29.2939 44.111C22.6394 42.3688 15.2863 33.3298 12.8698 23.9214C11.1533 17.2385 12.3895 12.1671 15.6344 10.4139M33.4563 44.0692L28.1061 46.988C26.7485 47.8072 25.0146 48.0185 22.9797 47.4857C21.996 47.2282 20.9971 46.8112 20.0011 46.2572C14.2592 43.0632 8.61494 35.3139 6.55562 27.2962C4.71966 20.1481 6.26169 14.8435 10.0268 13.4713L15.6344 10.4139M33.4563 44.0692C36.2454 43.0773 37.8268 39.9413 37.7369 35.4999M15.6344 10.4139C16.7129 9.83112 18.0134 9.61499 19.5011 9.82812"
                          stroke="#235B95"
                          stroke-linecap="round"
                          stroke-width="2"
                        />
                        <path
                          d="M25.1219 16.9861C24.7116 15.3929 24.4671 13.89 24.3757 12.5M24.6306 30.4642C22.4043 27.2121 20.6146 23.4478 19.6299 19.6237C17.8532 12.7244 19.1834 7.51927 22.6104 5.83338L28.0387 3.22768C29.363 2.55412 31.0063 2.41252 32.9089 2.91065C39.6668 4.67997 47.1374 13.8502 49.5949 23.3932C52.0523 32.9363 48.5661 39.2381 41.8079 37.4687C38.1052 36.4993 34.1887 33.3083 31 29.0517C29.9165 27.6053 28.9171 26.036 28.0387 24.3889C27.3678 23.1312 26.7676 21.8281 26.2543 20.5M24.831 7.48011C24.6479 8.10333 24.4315 9.5 24.4315 9.5"
                          stroke="#8AC0F7"
                          stroke-linecap="round"
                          stroke-width="2"
                        />
                        <path
                          d="M26.548 27.2108L25.3294 31.7588L20.7814 30.5402"
                          stroke="#8AC0F7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-2"
                >
                  <h1
                    class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
                    data-testid="header__title"
                  >
                    Exchange
                  </h1>
                   
                  <div
                    class="text-theme-secondary-text mt-0.5 flex items-center text-xs leading-5 font-semibold sm:mt-1 sm:text-sm sm:leading-[17px] sm:font-normal md:text-base md:leading-5"
                    data-testid="header__subtitle"
                  >
                    Choose one of the exchange providers below to swap directly from within the wallet.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full py-4 first:pt-8 last:pb-8 pt-0"
      >
        <div
          class="mx-auto md:px-10 lg:container px-6 lg:px-10"
        >
          <div
            class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 -mx-6 -mt-2 mb-4 border-t px-6 py-2 md:mx-0 md:mt-0 md:mb-3 md:border-t-0 md:bg-transparent md:p-0 md:px-0 md:py-0 dark:bg-black dark:md:bg-transparent"
          >
            <div
              class="w-full"
            >
              <div
                class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-theme-secondary-200 dark:bg-theme-dark-950 dim:bg-theme-dim-950"
              >
                <button
                  aria-selected="true"
                  class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
                  data-ring-focus-margin="-mx-3"
                  data-testid="tabs__tab-button-EXCHANGES"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Exchanges
                  </span>
                </button>
                <button
                  aria-selected="false"
                  class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
                  data-ring-focus-margin="-mx-3"
                  data-testid="tabs__tab-button-TRANSACTIONS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    Transactions
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="border-theme-secondary-300 text-theme-secondary-text dark:border-theme-secondary-800 dim:border-theme-dim-700 rounded-lg border-solid text-center leading-5 sm:border sm:p-6"
            data-testid="ExchangeGrid__empty-message"
          >
            <div>
              There are currently no exchange providers available, please try again at a later time.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange > should render with exchanges 1`] = `
<div>
  <div
    class="relative flex flex-col sm:min-h-screen pb-32 sm:pb-0"
    style="min-height: -webkit-fill-available;"
  >
    <div
      class="dim:bg-theme-dim-950 fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white sm:hidden dark:bg-black"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-900 dim:border-theme-dim-950 border-t"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="received"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  fill="none"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 21 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="h-5 relative mx-2 inline-block border-t-0 border-l border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dim:text-theme-dim-200"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="sent"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="custom-nav-wrapper dark:bg-theme-dark-900 dim:bg-theme-dim-900 sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 border-b-theme-secondary-300 dark:border-b-theme-dark-700 dim:border-b-theme-dim-700 h-12 border-b"
    >
      <div
        class="relative flex h-12 flex-row"
      >
        <div
          class="hidden w-9 sm:flex"
        >
          <button
            class="border-b-theme-secondary-300 bg-theme-secondary-100 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dim:bg-theme-dim-950 dim:border-b-theme-dim-700 flex w-9 items-center border-b transition-colors duration-200 text-theme-secondary-500 dark:text-theme-secondary-800 cursor-not-allowed"
          >
            <div
              class="mx-auto"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-left-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center justify-between gap-3 px-6"
        >
          <div
            class="flex flex-row items-center gap-5"
          >
            <div
              class="my-auto flex h-12 items-center"
            >
              <div
                class="flex items-center space-x-[2px]"
              >
                <button
                  class="bg-theme-primary-600 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 my-auto flex cursor-pointer items-center justify-center text-white outline-hidden focus:ring-2 focus:outline-hidden h-6 w-6 rounded rounded-r-none"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 363 363"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_434_4442)"
                      >
                        <path
                          d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                          fill="currentColor"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
                <div
                  class="dark:bg-theme-dark-navy-900 dark:text-theme-dark-navy-300 dim:bg-theme-dim-navy-900 dim:text-theme-dim-navy-300 bg-theme-navy-100 text-theme-navy-600 flex cursor-pointer items-center px-2 py-[0.313rem] text-center text-xs leading-[0.938rem] font-semibold h-6 rounded rounded-l-none"
                >
                  ALPHA
                </div>
              </div>
            </div>
            <ul
              class="hidden h-12 items-center gap-0.5 xl:flex"
              data-testid="NavigationBar__menu"
            >
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-primary-600 border-theme-primary-200 bg-theme-secondary-200 dim:text-theme-dim-50 dim:bg-theme-dim-950 dim:border-theme-dim-700 dark:text-theme-dark-50 dark:bg-theme-dark-950 dark:border-theme-dark-700 active"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/contacts"
                  title="Contacts"
                >
                  Contacts
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="ring-focus dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-900 dim-hover:bg-theme-dim-700 relative flex h-fit items-center rounded border px-2 py-1 text-sm leading-[17px] font-semibold transition-all duration-200 focus:outline-hidden text-theme-secondary-700 dim:text-theme-dim-200 dark:text-theme-dark-200 border-transparent bg-transparent"
                  data-discover="true"
                  href="/profiles/877b7695-8a55-4e16-a7ff-412113131856/votes"
                  title="Votes"
                >
                  Votes
                </a>
              </li>
            </ul>
            <div
              class="mr-auto flex content-center items-center xl:hidden"
              data-testid="NavigationBar__menu-toggle"
            >
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="text-theme-secondary-700 dark:text-theme-dark-200 focus:ring-theme-primary-400 flex h-7 cursor-pointer items-center rounded focus:ring-2 focus:outline-hidden"
                  type="button"
                >
                  <div>
                    <div
                      style="height: 20px; width: 20px;"
                    >
                      <svg
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M1 15.5h18M1 10h18M1 4.5h18"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex flex-row items-center justify-center gap-3 sm:gap-5"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700 dim:text-theme-dim-200 dim-hover:text-theme-dim-50"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="m-0 p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="bell"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="bg-theme-background group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800 absolute top-0 right-0 flex items-center justify-center rounded-full p-0.5 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="bg-theme-danger-500 h-1.5 w-1.5 rounded-full"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-6 border-r sm:h-12"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="custom-button-nav-wrapper group"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="m-0 p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            fill="none"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.4055 7.25359C12.7875 3.8816 9.75152 1.59001 6.47283 2.0207C3.19415 2.45138 0.803089 5.45586 1.0128 8.88148C1.2225 12.3071 3.96068 14.9728 7.26548 14.9687H15.0878C16.6941 14.9714 18.1382 13.9523 18.7275 12.4002C19.3168 10.8481 18.9312 9.07955 17.7555 7.94265C16.5799 6.80574 14.8539 6.53236 13.4055 7.25359ZM13.4055 7.25359C13.5 7.96875 13.4 8.76875 13 9.96875"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center justify-center rounded-full p-1 transition-all duration-100 ease-linear"
                      >
                        <div
                          class="h-1.5 w-1.5 rounded-full bg-theme-success-600 dark:bg-theme-success-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden h-6 border-r sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="received"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 hidden h-6 border-r sm:flex sm:h-12"
            />
            <div
              class="hidden items-center sm:flex"
            >
              <div>
                <div
                  class="custom-button-nav-wrapper"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50 hover:text-theme-primary-700"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center gap-2"
                    >
                      <div
                        class="p-1"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="sent"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 h-6 border-r sm:h-12"
            />
            <div
              class="hidden sm:block"
            >
              <div>
                <div
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group"
                  >
                    <button
                      class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-secondary-700 dark:text-theme-secondary-600 dark:group-hover:bg-theme-dark-700 group-hover:bg-theme-secondary-200 w-auto p-1"
                      data-testid="NavigationBar__buttons--network"
                      type="button"
                    >
                      <div
                        class="flex items-center gap-2"
                      >
                        <span
                          class="border-theme-warning-300 bg-theme-warning-50 text-theme-warning-600 dark:border-theme-danger-info-border dark:text-theme-danger-info-text rounded border-2 p-[3px] dark:bg-transparent"
                        >
                          <div>
                            <div
                              style="height: 14px; width: 14px;"
                            >
                              <svg
                                fill="none"
                                height="14"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 14 14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  id="Frame 9852"
                                >
                                  <path
                                    d="M3 3.36257V1.81641H11.1236V3.36257H7.97656V11.9982H6.14702V3.36257H3Z"
                                    fill="currentColor"
                                    id="T"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </span>
                        <span
                          class="text-theme-secondary-700 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 group-hover:text-theme-secondary-900 text-sm"
                        >
                          Testnet
                        </span>
                        <div
                          class="text-theme-secondary-700 group-hover:text-theme-secondary-900 dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 transition-transform"
                          role="img"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-dark-700 hidden h-6 border-r sm:block sm:h-12"
            />
            <div
              class="ml-1 flex items-center gap-5 sm:ml-0"
            >
              <div
                class="m-0 items-center gap-2 space-x-0 md-lg:flex hidden"
              >
                <button
                  class="space-x-3 text-base relative justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none group text-theme-secondary-700 dark:text-theme-dark-200 dark:hover:bg-theme-dark-700 hover:bg-theme-secondary-200 dim:text-theme-dim-200 dim-hover:text-theme-dim-50 dim-hover:bg-theme-dim-700 flex flex-row items-center gap-2 rounded px-1 py-0.5"
                  data-testid="HideBalance-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      class="flex items-center justify-center"
                    >
                      <div
                        data-testid="HideBalance-icon-show"
                      >
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="eye"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                              />
                              <path
                                d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="text-theme-secondary-700 md-lg:flex dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50 group-hover:text-theme-secondary-900 hidden text-sm leading-[17px] font-semibold"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <button
                  class="group dark:hover:bg-theme-dark-700 hover:bg-theme-secondary-200 dim-hover:bg-theme-dim-700 flex items-center gap-6 rounded bg-transparent py-0.5"
                >
                  <div
                    class="relative cursor-pointer items-center justify-center rounded align-middle"
                    data-testid="UserMenu"
                  >
                    <div
                      class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-6 w-6 text-xs ring-theme-background ring-0 shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                        />
                        <span
                          class="text-theme-background dark:text-theme-text absolute text-xs font-semibold"
                        >
                          FO
                        </span>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8"
      >
        <div
          class="mx-auto px-6 md:px-10 lg:container"
        >
          <div
            class="bg-theme-background flex items-end justify-between"
          >
            <div
              class="space-y-2"
            >
              <div
                class="mb-1 flex items-center gap-3"
              >
                <div
                  class="hidden sm:inline"
                >
                  <div
                    data-testid="icon-ExchangesLight"
                  >
                    <div
                      style="height: 55px; width: 54px;"
                    >
                      <svg
                        fill="none"
                        height="51"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 54 51"
                        width="54"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M29.2931 44.1134C30.874 44.5273 32.2733 44.4921 33.4555 44.0716L28.1053 46.9905C26.7477 47.8096 25.0138 48.0209 22.9789 47.4882C21.9952 47.2306 20.9963 46.8137 20.0003 46.2597C18.0183 45.1571 16.0479 43.5118 14.2325 41.5C12.883 40.0044 11.6192 38.3063 10.5 36.4782L16.5 32.5803C17.5461 34.3557 18.7301 36.018 20.0003 37.5032C21.7188 39.5125 23.5948 41.1978 25.5 42.401C26.7641 43.1994 28.0409 43.7856 29.2931 44.1134Z"
                          fill="#235B95"
                        />
                        <path
                          d="M15.6336 10.4163L15.5983 10.4355C13.2894 11.7059 12.0085 14.6684 12.1003 18.6997L5.78455 22C5.70245 17.5949 7.26764 14.479 10.026 13.4737L15.5983 10.4355C15.61 10.4291 15.6218 10.4227 15.6336 10.4163Z"
                          fill="#235B95"
                        />
                        <path
                          d="M6.55483 27.2986L12.869 23.9238C12.7002 23.2664 12.5599 22.6246 12.4473 22L6.11968 25.2997C6.23449 25.9479 6.3792 26.6148 6.55483 27.2986Z"
                          fill="#235B95"
                        />
                        <path
                          d="M33.4563 44.0692C32.2741 44.4896 30.8748 44.5249 29.2939 44.111C22.6394 42.3688 15.2863 33.3298 12.8698 23.9214C11.1533 17.2385 12.3895 12.1671 15.6344 10.4139M33.4563 44.0692L28.1061 46.988C26.7485 47.8072 25.0146 48.0185 22.9797 47.4857C21.996 47.2282 20.9971 46.8112 20.0011 46.2572C14.2592 43.0632 8.61494 35.3139 6.55562 27.2962C4.71966 20.1481 6.26169 14.8435 10.0268 13.4713L15.6344 10.4139M33.4563 44.0692C36.2454 43.0773 37.8268 39.9413 37.7369 35.4999M15.6344 10.4139C16.7129 9.83112 18.0134 9.61499 19.5011 9.82812"
                          stroke="#235B95"
                          stroke-linecap="round"
                          stroke-width="2"
                        />
                        <path
                          d="M25.1219 16.9861C24.7116 15.3929 24.4671 13.89 24.3757 12.5M24.6306 30.4642C22.4043 27.2121 20.6146 23.4478 19.6299 19.6237C17.8532 12.7244 19.1834 7.51927 22.6104 5.83338L28.0387 3.22768C29.363 2.55412 31.0063 2.41252 32.9089 2.91065C39.6668 4.67997 47.1374 13.8502 49.5949 23.3932C52.0523 32.9363 48.5661 39.2381 41.8079 37.4687C38.1052 36.4993 34.1887 33.3083 31 29.0517C29.9165 27.6053 28.9171 26.036 28.0387 24.3889C27.3678 23.1312 26.7676 21.8281 26.2543 20.5M24.831 7.48011C24.6479 8.10333 24.4315 9.5 24.4315 9.5"
                          stroke="#8AC0F7"
                          stroke-linecap="round"
                          stroke-width="2"
                        />
                        <path
                          d="M26.548 27.2108L25.3294 31.7588L20.7814 30.5402"
                          stroke="#8AC0F7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-2"
                >
                  <h1
                    class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
                    data-testid="header__title"
                  >
                    Exchange
                  </h1>
                   
                  <div
                    class="text-theme-secondary-text mt-0.5 flex items-center text-xs leading-5 font-semibold sm:mt-1 sm:text-sm sm:leading-[17px] sm:font-normal md:text-base md:leading-5"
                    data-testid="header__subtitle"
                  >
                    Choose one of the exchange providers below to swap directly from within the wallet.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full py-4 first:pt-8 last:pb-8 pt-0"
      >
        <div
          class="mx-auto md:px-10 lg:container px-6 lg:px-10"
        >
          <div
            class="border-theme-secondary-300 bg-theme-secondary-200 dark:border-theme-dark-700 -mx-6 -mt-2 mb-4 border-t px-6 py-2 md:mx-0 md:mt-0 md:mb-3 md:border-t-0 md:bg-transparent md:p-0 md:px-0 md:py-0 dark:bg-black dark:md:bg-transparent"
          >
            <div
              class="w-full"
            >
              <div
                class="tab-list flex w-fit items-center gap-1 rounded-xl p-1 bg-theme-secondary-200 dark:bg-theme-dark-950 dim:bg-theme-dim-950"
              >
                <button
                  aria-selected="true"
                  class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
                  data-ring-focus-margin="-mx-3"
                  data-testid="tabs__tab-button-EXCHANGES"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span>
                    Exchanges
                  </span>
                </button>
                <button
                  aria-selected="false"
                  class="tab-button rounded px-3 py-1.5 text-base leading-5 font-semibold transition-all md:rounded-lg"
                  data-ring-focus-margin="-mx-3"
                  data-testid="tabs__tab-button-TRANSACTIONS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    Transactions
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="grid w-full gap-3 md:grid-cols-2"
            data-testid="ExchangeGrid"
          >
            <div
              data-testid="ExchangeCard--changenow"
            >
              <div>
                <button
                  class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 dim:border-theme-dim-700 dim:focus-visible:border-theme-dim-navy-600 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex flex-col items-center gap-3 md:flex-row"
                  >
                    <div
                      class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
                    >
                      <img
                        alt="ChangeNOW Logo"
                        class="h-full w-full object-cover"
                        src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate text-sm font-semibold md:text-lg link"
                      >
                        ChangeNOW
                      </div>
                    </div>
                  </div>
                  <div
                    class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                  />
                </button>
              </div>
            </div>
            <div
              data-testid="ExchangeCard--changelly"
            >
              <div>
                <button
                  class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 dim:border-theme-dim-700 dim:focus-visible:border-theme-dim-navy-600 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex flex-col items-center gap-3 md:flex-row"
                  >
                    <div
                      class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
                    >
                      <img
                        alt="Changelly Logo"
                        class="h-full w-full object-cover"
                        src="https://exchanges.arkvault.io/images/changelly/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate text-sm font-semibold md:text-lg link"
                      >
                        Changelly
                      </div>
                    </div>
                  </div>
                  <div
                    class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
